fixing copy issues.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </a>
             <div class="description">
               <h3>Arby's</h3>
-              <p>General site maintenance may not be the sexiest of work, but it's something that needs to happen. For Arby's, I worked on general site maintenance as well as lead the monthly promotional Email blasts+landing pages.</p>
+              <p>General site maintenance may not be the sexiest of work, but it's something that needs to happen. For Arby's, I work on general site maintenance as well as lead the monthly promotional Email blasts+landing pages.</p>
               <h4>Technologies used:</h4>
               <ul>
                 <li>MODX Content Management System</li>
@@ -91,7 +91,7 @@
             </a>
             <div class="description">
               <h3>OPEN Form by American Express</h3>
-              <p>Worked on the front of .Net application to update older application to new design. Lots of experience with implementing new social tools and analytics software such as Omniture.</p>
+              <p>I worked on the front of .Net application to update older application to new design. This provided lots of experience with implementing new social tools and analytics software such as Omniture.</p>
               <h4>Technologies used:</h4>
               <ul>
                 <li>.Net</li>
@@ -107,7 +107,7 @@
             <img src="assets/img/oldnavy.jpg" alt="OldNavy" />
             <div class="description">
               <h3>Old Navy Cheermageddon</h3>
-              <p>Cheermageddon was the name for Old Navy's 2012 Black Friday sale. Due to the short lifespan of this project many awesome new were able to be used. This provided both a fantasic opportunity and a learning experience. Plus it yielded what is by far my proudest moment working in advertising: <a href="http://www.youtube.com/watch?v=bN3458ksv8E">this.</a></p>
+              <p>Cheermageddon was the name for Old Navy's 2012 Black Friday sale. Due to the short lifespan of this project many awesome new technologies were able to be used. This provided both a fantasic opportunity and a learning experience. Plus it yielded what is by far my proudest moment working in advertising: <a href="http://www.youtube.com/watch?v=bN3458ksv8E">this.</a></p>
               <h4>Technologies used:</h4>
               <ul>
                 <li>Node.JS</li>
@@ -147,12 +147,13 @@
         </ul>
         </div>
         <div id="brew" class="brew">
-           <a href="#brew"></a>
+          <a href="#brew"></a>
           <h2>{ Brew }</h2>
+          <p class="info">&ldquo;I brew beer sometimes too.&rdquo;</p>
           <div class="brew-data">
             <img src="/assets/img/bkg.main.png" alt="Isn't beer great?" />
             <div class="copy">
-              <p class="info">Ah, beer. Beverage whos history is as rich as the malty grains that produce it. About 2 years ago I took up homebrewing in an effort to create my own craft beers. The results have been generally positive.</p>
+              <p class="info">Ah, beer. Beverage whos history is as rich as the malty grains that produce it. About 2 years ago, I took up homebrewing in an effort to create my own craft beers. The results have been generally positive.</p>
               <h3>Currently Brewing: Ich Bin Mine Berliner</h3>
               <p>A Berliner Weisse beer, sour wheat beer.<p>
               <h3>Kegorator</h3>
@@ -164,7 +165,7 @@
         <div id="about" class="about">
           <a href="#about"></a>
           <h2>{ About }</h2>
-          <p class="info">Questions which no one has asked but I will still answer:</p>
+          <p class="info">&ldquo;And sometimes I even answer fake questions.&rdquo;</p>
           <dl>
             <dt>Where did you go to school<span>?</span></dt>
             <dd>Rochester Institute of Technology, graduated from the New Media Interactive Development program in 2010.</dd>
@@ -176,13 +177,13 @@
             <dt>Whats the deal with ratherironic<span>?</span></dt>
             <dd>No idea. Seriously.</dd>
             <dt>What is your favorite beer<span>?</span> Since you are clearly obsessed.</dt>
-            <dd>Southern Tier's Creme Brule Stout</dd>
+            <dd>Southern Tier's Creme Brulee Stout</dd>
             <dt>On average how much coffee do you drink<span>?</span></dt>
             <dd>Too much.</dd>
             <dt>What was your favorite cartoon as a kid<span>?</span></dt>
             <dd>Ed, Edd and Eddy.</dd>
             <dt>If you weren't a developer what would you be<span>?</span></dt>
-            <dd>Dead. Or a barista. Maybe a brewer if I knew how to get an in on that.</dd>
+            <dd>Dead. Or a barista. Maybe a brewer, if I knew how to get an in on that.</dd>
             <dt>What is your favorite charecte on tf2<span>?</span></dt>
             <dd>Spy.</dd>
             <dt>Sports<span>?</span></dt>
