--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h1>Hello. I'm Matthew Gordon!</h1>
             <h2>I’m an Interactive Developer.</h2>
             <p>It’s very nice to meet you.</p>
+            <p><a href="mailto:ratherironic@gmail.com">Want to talk or work with me?</a></p>
           </div>
         </div>
         <a href="#work"></a>
